--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="At Redash, we're more than just a fashion brand – we're creators of individuality. Explore our diverse collection of apparel, meticulously designed to inspire and empower. With our intuitive customization tool, you're not just buying clothes; you're crafting a unique statement that reflects your personality. From trendsetting tees to timeless classics, Redash offers a fusion of style and self-expression. Join us in redefining fashion and embrace the freedom to be uniquely you. Elevate your wardrobe with Redash today."
+      content="At Mr Redash, we're more than just a fashion brand – we're creators of individuality. Explore our diverse collection of apparel, meticulously designed to inspire and empower. With our intuitive customization tool, you're not just buying clothes; you're crafting a unique statement that reflects your personality. From trendsetting tees to timeless classics, Redash offers a fusion of style and self-expression. Join us in redefining fashion and embrace the freedom to be uniquely you. Elevate your wardrobe with Redash today."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -20,20 +20,22 @@
       content="MUkEgIQ3xkeccdLkUC9-8wTvhVJV0St1HleC6Pq89fU"
     />
 
-    <title>Redash</title>
-    <meta data-rh="true" property="og:site_name" content="Redash" />
+    <link rel="canonical" href="https://www.mrredash.com/" />
+
+    <title>Mr Redash</title>
+    <meta data-rh="true" property="og:site_name" content="Mr Redash" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Redash",
         "alternateName": "RA",
-        "url": "https://www.redash.us/",
+        "url": "https://www.mrredash.com/",
         "potentialAction": {
           "@type": "SearchAction",
           "target": {
             "@type": "EntryPoint",
-            "urlTemplate": "https://www.redash.us/?query={search_term_string}"
+            "urlTemplate": "https://www.mrredash.com/?query={search_term_string}"
           },
           "query-input": "required name=search_term_string"
         }
