--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <link rel="canonical" href="https://www.mrredash.com/" />
 
-    <title>Mr Redash</title>
-    <meta data-rh="true" property="og:site_name" content="Mr Redash" />
+    <title>MrRedash</title>
+    <meta data-rh="true" property="og:site_name" content="MrRedash" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Redash",
+        "name": "MrRedash",
         "alternateName": "RA",
         "url": "https://www.mrredash.com/",
         "potentialAction": {
